tests/invalid_typecheck/test_tc_not_on_int.aphi
/*
Type-check error: Invalid operand for '!' (expected bool, got int).
Applies unary NOT to an int variable.
*/

int x;
bool r;

procedure main {
    x = 5;
    r = !x;
}
